# agentic-data-platform

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
adp/: __init__.py  agent.py  api.py  cli.py  config.py  eval_harness.py  llm.py  memory.py  monitoring.py  planner.py  platform.py  retry.py  samples.py  tools.py  warehouse.py
adp/econ/: README.md
docs/: econ_index_run.json  findings.md
eval/: tasks.yaml
tests/: conftest.py  test_api.py  test_pipeline.py  test_retry.py
